# ai-drowning-mock

./: Dockerfile  README.md  analytics.php  api.php  database.php  demo_train.py  demo_training.py  detect.php  detection.php  docker-compose.yml  index.php  install.php  login.php  pyproject.toml  record_video.php  requirements.txt  simple_demo.py  test_system.php  train.py  training_demo_results.json  ultra_accuracy_demo.py  ultra_high_accuracy_demo.py  ultra_high_accuracy_training_results.json  users.php
docs/: documentation.md
includes/: ai_chatbot.php  ai_detection.php  ai_detector.php  alert_system.php  config.php  database.php  email_integration.php  esp_location.php  motion_detector.php  sms_integration.php  weather_integration.php
src/: advanced_training.py  ai_model.py  config.py  database.py  detection.py  download_dataset.py  drowning_cnn.py  evaluate_model.py
src/api/: __init__.py  app.py  routes.py
src/models/: __init__.py  base_model.py  basic_cnn.py  efficientnet_model.py  ensemble_model.py  mobilenet_model.py  resnet_model.py
templates/: index.html
